--- a/index.html
+++ b/index.html
@@ -192,23 +192,50 @@
                 <div class="mt-5">
                     <div class="section">
                         <div class="head">
-                            Все деньги можно будет вывести?
+                            Какие есть гарантии?
                         </div>
                         <div class="body">
-                            ...
+                            Нужно понимать, что это торговля на форексе, и 100%-ых гарантий никто дать не может. Если Вы боитесь рисков, то этот робот не для Вас. Лучше храните свои деньги под подушкой. Инвестиции – это всегда риск, но в этом проекте он сведен к минимуму, благодаря умному роботу "RoboScorp". Робот существует 2.5 года, его настройки тестировались на демо счёте в течение года. Убедившись в стабильности дохода - перешли на реальные депозиты, и по сей день робот показывает отличный результат.
                         </div>
                     </div>
                     <div class="section">
                         <div class="head">
-                            Все деньги можно будет вывести?
+                            Сколько нужно вложить средств?
                         </div>
                         <div class="body">
-                            Нет какой-то конкретной цифры, минимальное пополнение в системе 100$ (6600 руб.).
-                            Мы рекомендуем партнерам начать с 30 т.р. и, убедившись в том, что он реально работет, пополнить свой баланс. 
-                            Но можно начать и с 6600 рую, средняя доходность в любом случае будет составлять около 20%, независимо от суммы депозита. 
-                            Конечно, чем больше ваш баланс, тем более ощутима прибыль, визуально и фактически, так как 0.5%-1% в день с 200$ и 1000$ равен 1$-2$ и 5$-10$ соответственно.
+                            Нет какой-то конкретной суммы, минимальное пополнение в системе 100$ (6400 руб.). Конечно , чем больше ваш баланс, тем более ощутима прибыль, как визуально, так и фактически.
                         </div>
                     </div>
+                    <div class="section">
+                        <div class="head">
+                            Ввод и вывод.
+                        </div>
+                        <div class="body">
+                            Вывод и пополнение средств можно осуществлять в любое время и с любой периодичностью.
+                            При желании можно вывести все средства, ограничений на сумму вывода нет. Деньги можно вывести на те же реквизиты, с которых осуществляли пополнение, сделано это в целях безопасности.
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="head">
+                            Сколько стоит RoboScorp?
+                        </div>
+                        <div class="body">
+                            Цена: 30 т.р.
+                            Оплату можно производить на:
+                            1) Qiwi
+                            2) Сбербанк
+                            3) ВТБ
+                        </div>
+                   </div>
+                   <div class="section">
+                       <div class="head">
+                           Есть ли ежемесячные платы?
+                       </div>
+                       <div class="body">
+                           Да. Оплата за аренду сервера 3$ в месяц. Сервер нужен для того, чтобы установить робота на ваш счёт. Тем самым на сервере можно наблюдать за работой робота, смотреть ежедневные выплаты, анализировать рынок и т.д.
+                           <br> Если Вы хотите приобрести робота или есть вопросы - обращайтесь к нам, всё подробно расскажем и покажем.
+                       </div>
+                   </div>
                 </div>
             </section>
         </div>
