--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             Ввод и вывод.
                         </div>
                         <div class="body">
-                            Вывод и пополнение средств можно осуществлять в любое время и с любой периодичностью.
+                            Вывод и пополнение средств можно осуществлять в любое время и с любой периодичностью. <br>
                             При желании можно вывести все средства, ограничений на сумму вывода нет. Деньги можно вывести на те же реквизиты, с которых осуществляли пополнение, сделано это в целях безопасности.
                         </div>
                     </div>
@@ -220,10 +220,10 @@
                             Сколько стоит RoboScorp?
                         </div>
                         <div class="body">
-                            Цена: 30 т.р.
-                            Оплату можно производить на:
-                            1) Qiwi
-                            2) Сбербанк
+                            Цена: 30 т.р. <br>
+                            Оплату можно производить на: <br>
+                            1) Qiwi <br>
+                            2) Сбербанк <br>
                             3) ВТБ
                         </div>
                    </div>
@@ -232,8 +232,8 @@
                            Есть ли ежемесячные платы?
                        </div>
                        <div class="body">
-                           Да. Оплата за аренду сервера 3$ в месяц. Сервер нужен для того, чтобы установить робота на ваш счёт. Тем самым на сервере можно наблюдать за работой робота, смотреть ежедневные выплаты, анализировать рынок и т.д.
-                           <br> Если Вы хотите приобрести робота или есть вопросы - обращайтесь к нам, всё подробно расскажем и покажем.
+                           Да. Оплата за аренду сервера 3$ в месяц. Сервер нужен для того, чтобы установить робота на ваш счёт. Тем самым на сервере можно наблюдать за работой робота, смотреть ежедневные выплаты, анализировать рынок и т.д. <br><br>
+                           Если Вы хотите приобрести робота или есть вопросы - обращайтесь к нам, всё подробно расскажем и покажем.
                        </div>
                    </div>
                 </div>
