Add carousel for reviews

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <title>Roboscorp</title>
 </head>
 <body>
@@ -161,24 +164,45 @@
             <div class="content">
                 <section>
                     <h2 class="center">Отзывы наших партнеров</h2>
-                    <div class="row">
-                        <div class="col-md-3 mb-5">
-                            <img src="img/reviews/r_1.png" alt="Отзыв Дмитрий Абрамов">
-                        </div>
-                        <div class="col-md-9 review">
-                            <div class="name ">
-                                Дмитрий Абрамов
-                            </div>
-                            <br>
-                            <p>
-                                О аналогичных роботах знаю довольно давно, 
-                                но всё никак никак не решался приобрести такое удовольствие, 
-                                смущала цена у различных продавцов и не владел информацией о них,
-                                да и сами продавцы на контакт шли без энтузиазма.  
-                                Roboscorp заинтересовал своей привлекательной ценой и наличием кэшбека. 
-                                Выражаю благодарность за оперативную поддержку, рассказали всё подробно и грамотно, разложили всё по полочкам.
-                            </p>
-                        </div>
+                    <div class="owl-carousel owl-theme">
+                         <div class="row">
+                             <div class="col-md-3 mb-5">
+                                 <img src="img/reviews/r_1.png" alt="Отзыв Дмитрий Абрамов">
+                             </div>
+                             <div class="col-md-9 review">
+                                 <div class="name ">
+                                     Дмитрий Абрамов
+                                 </div>
+                                 <br>
+                                 <p>
+                                     О аналогичных роботах знаю довольно давно,
+                                     но всё никак никак не решался приобрести такое удовольствие,
+                                     смущала цена у различных продавцов и не владел информацией о них,
+                                     да и сами продавцы на контакт шли без энтузиазма.
+                                     Roboscorp заинтересовал своей привлекательной ценой и наличием кэшбека.
+                                     Выражаю благодарность за оперативную поддержку, рассказали всё подробно и грамотно, разложили всё по полочкам.
+                                 </p>
+                             </div>
+                         </div>
+                         <div class="row">
+                             <div class="col-md-3 mb-5">
+                                 <img src="img/reviews/r_1.png" alt="Отзыв Дмитрий Абрамов">
+                             </div>
+                             <div class="col-md-9 review">
+                                 <div class="name ">
+                                     Дмитрий Абрамов
+                                 </div>
+                                 <br>
+                                 <p>
+                                     О аналогичных роботах знаю довольно давно,
+                                     но всё никак никак не решался приобрести такое удовольствие,
+                                     смущала цена у различных продавцов и не владел информацией о них,
+                                     да и сами продавцы на контакт шли без энтузиазма.
+                                     Roboscorp заинтересовал своей привлекательной ценой и наличием кэшбека.
+                                     Выражаю благодарность за оперативную поддержку, рассказали всё подробно и грамотно, разложили всё по полочкам.
+                                 </p>
+                             </div>
+                         </div>
                     </div>
                 </section>
             </div>
@@ -393,6 +417,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
