--- a/index.html
+++ b/index.html
@@ -190,16 +190,25 @@
                              </div>
                              <div class="col-md-9 review">
                                  <div class="name ">
-                                     Дмитрий Абрамов
+                                     Ирина Васильева
                                  </div>
                                  <br>
                                  <p>
-                                     О аналогичных роботах знаю довольно давно,
-                                     но всё никак никак не решался приобрести такое удовольствие,
-                                     смущала цена у различных продавцов и не владел информацией о них,
-                                     да и сами продавцы на контакт шли без энтузиазма.
-                                     Roboscorp заинтересовал своей привлекательной ценой и наличием кэшбека.
-                                     Выражаю благодарность за оперативную поддержку, рассказали всё подробно и грамотно, разложили всё по полочкам.
+                                     Всегда очень хотела иметь нечто подобное, но боялась мошенников, задала кучу вопросов в поддержку (спасибо команде за ваше терпение) Они предоставили мне гарантии и вообще ввели в курс дела, рассказали даже больше, чем нужно мне было знать:)) Купила и ни о чём не жалею.
+                                 </p>
+                             </div>
+                         </div>
+                         <div class="row">
+                             <div class="col-md-3 mb-5">
+                                 <img src="img/reviews/r_1.png" alt="Отзыв Дмитрий Абрамов">
+                             </div>
+                             <div class="col-md-9 review">
+                                 <div class="name ">
+                                     Сергей Григорьев
+                                 </div>
+                                 <br>
+                                 <p>
+                                     В данном продукте понравилась система стыковки процентов. После приобретения вложил 38к и уже через 2 месяца имел на руках 59к, то есть робот полностью окупился за 2 месяца. Конечно каждый вкладывает в силу своих финансовых возможностей и в начале наверняка все будут проверять робота на "вшивость", как это делал я. После того, как я убедился в том, что здесь мошенничеством не пахнет, решил вложить 200к, теперь в месяц приходит 50 с лишним тысяч. Я сам инвестирую в своё будущее. Чувствую скоро уволюсь со своей любимой работы :))
                                  </p>
                              </div>
                          </div>
